[gd_scene load_steps=25 format=2]

[ext_resource path="res://Backgrounds/HouseInside.png" type="Texture" id=1]
[ext_resource path="res://John/John.tscn" type="PackedScene" id=2]
[ext_resource path="res://Entities/Harlequinsprite.tscn" type="PackedScene" id=3]
[ext_resource path="res://Backgrounds/SmallStair.png" type="Texture" id=4]
[ext_resource path="res://House/HouseInside.gd" type="Script" id=5]
[ext_resource path="res://Backgrounds/Cruxtruder.png" type="Texture" id=6]
[ext_resource path="res://Backgrounds/Posters/HarlequinPoster2.png" type="Texture" id=7]
[ext_resource path="res://Backgrounds/Posters/HarlequinPoster1.png" type="Texture" id=8]
[ext_resource path="res://Backgrounds/Posters/BeaglePussPoster.png" type="Texture" id=9]
[ext_resource path="res://Backgrounds/Posters/HarlequinPoster3.png" type="Texture" id=10]
[ext_resource path="res://Backgrounds/Couch.png" type="Texture" id=11]
[ext_resource path="res://Backgrounds/CruxtruderLid.png" type="Texture" id=12]
[ext_resource path="res://Backgrounds/HarlequinHead.png" type="Texture" id=13]
[ext_resource path="res://Backgrounds/Fireplace.png" type="Texture" id=14]
[ext_resource path="res://Backgrounds/Posters/HarlequinPoster4.png" type="Texture" id=15]
[ext_resource path="res://House/CameraControl.gd" type="Script" id=16]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 38, 72 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 39, 34 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 57, 43 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 45, 60 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 31, 101 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 64, 139 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 24, 36 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 114, 217 )

[node name="HouseInside" type="Node2D"]
script = ExtResource( 5 )
map_size = Vector2( 1580, 1570 )

[node name="Map" type="Node2D" parent="."]
position = Vector2( 747, 947 )
__meta__ = {
"_edit_lock_": true
}

[node name="House" type="StaticBody2D" parent="Map"]
position = Vector2( -6, -329 )
z_index = -4
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Map/House"]
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="Map/House"]
position = Vector2( -371, -207 )
texture = ExtResource( 4 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Map/House"]
visible = false
polygon = PoolVector2Array( -801, -829, 802, -828, 798, 412, -19, 830, -170, 748, -234, 774, -784, 511, -777, -9, -120, -221, 194, -130, 512, 270, 446, 370, 59, 227, -67, 180, -114, 160, -265, 216, -746, 436, -400, 587, -462, 619, -236, 723, -161, 696, -17, 762, 586, 466, 641, 345, 753, 288, 611, 225, 299, -186, -298, -339, -427, -298, -293, -249, -337, -234, -263, -195, -263, -162, -679, -17, -795, -52, -807, -335 )

[node name="BeaglePussPoster" type="Sprite" parent="Map" groups=[
"Interactables",
]]
position = Vector2( -219, -859 )
z_index = -3
texture = ExtResource( 9 )

[node name="InteractArea" type="Area2D" parent="Map/BeaglePussPoster"]
collision_layer = 2
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/BeaglePussPoster/InteractArea"]
polygon = PoolVector2Array( -52, 67, -52, -88, 53, -83, 52, 88 )

[node name="HarlequinPoster1" type="Sprite" parent="Map" groups=[
"Interactables",
]]
position = Vector2( 149, -808 )
z_index = -3
texture = ExtResource( 8 )

[node name="InteractArea" type="Area2D" parent="Map/HarlequinPoster1"]
collision_layer = 2
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/HarlequinPoster1/InteractArea"]
polygon = PoolVector2Array( -116, 119, -114, -180, 115, -160, 114, 180 )

[node name="HarlequinPoster2" type="Sprite" parent="Map" groups=[
"Interactables",
]]
position = Vector2( 607, -315 )
z_index = -3
texture = ExtResource( 7 )

[node name="InteractArea" type="Area2D" parent="Map/HarlequinPoster2"]
collision_layer = 2
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/HarlequinPoster2/InteractArea"]
polygon = PoolVector2Array( -95, 52, -93, -102, 92, -53, 92, 104 )

[node name="HarlequinPoster3" type="Sprite" parent="Map" groups=[
"Interactables",
]]
position = Vector2( 159, -301 )
z_index = -3
texture = ExtResource( 10 )

[node name="InteractArea" type="Area2D" parent="Map/HarlequinPoster3"]
collision_layer = 2
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/HarlequinPoster3/InteractArea"]
polygon = PoolVector2Array( -82, 56, -80, -110, 85, -58, 81, 110 )

[node name="HarlequinPoster4" type="Sprite" parent="Map" groups=[
"Interactables",
]]
position = Vector2( -548, -273 )
z_index = -3
texture = ExtResource( 15 )

[node name="InteractArea" type="Area2D" parent="Map/HarlequinPoster4"]
collision_layer = 2
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/HarlequinPoster4/InteractArea"]
polygon = PoolVector2Array( 46, 54, 46, -85, -46, -53, -46, 83 )

[node name="YSort" type="YSort" parent="Map"]
position = Vector2( -744, -929 )

[node name="John" parent="Map/YSort" instance=ExtResource( 2 )]
position = Vector2( 690, 849 )

[node name="Harlequinsprite" parent="Map/YSort" instance=ExtResource( 3 )]
position = Vector2( 319, 296 )

[node name="Cruxtruder" type="StaticBody2D" parent="Map/YSort" groups=[
"Interactables",
]]
position = Vector2( 504, 1171 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Map/YSort/Cruxtruder"]
position = Vector2( -2.60001, -60 )
texture = ExtResource( 6 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/YSort/Cruxtruder"]
position = Vector2( -2.60001, -60 )
polygon = PoolVector2Array( -206.4, 98, -203.4, 64, 1.60001, -30, 208.6, 60, 208.6, 96, 7.60001, 192 )

[node name="InteractArea" type="Area2D" parent="Map/YSort/Cruxtruder"]
visible = false
collision_layer = 2
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/YSort/Cruxtruder/InteractArea"]
polygon = PoolVector2Array( 3, 140, 209, 36, 206, -61, 120, -99, 118, -140, 63, -167, 63, -274, -68, -268, -65, -173, -139, -134, -141, -102, -220, -62, -220, 37 )

[node name="CouchArea" type="StaticBody2D" parent="Map/YSort"]
position = Vector2( 958, 874 )

[node name="Sprite" type="Sprite" parent="Map/YSort/CouchArea"]
texture = ExtResource( 11 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/YSort/CouchArea"]
polygon = PoolVector2Array( -112, -121, -122, -26, -221, 18, -219, 54, -8, 143, 102, 96, 166, 121, 203, 92, 206, 22, 224, 11, 137, -20, 138, -48 )

[node name="Lamp" type="Node2D" parent="Map/YSort/CouchArea" groups=[
"Interactables",
]]
position = Vector2( 185, -55 )
__meta__ = {
"_edit_group_": true
}

[node name="InteractArea" type="Area2D" parent="Map/YSort/CouchArea/Lamp"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Map/YSort/CouchArea/Lamp/InteractArea"]
shape = SubResource( 1 )

[node name="PieTray" type="Node2D" parent="Map/YSort/CouchArea" groups=[
"Interactables",
]]
position = Vector2( -51, 24 )
__meta__ = {
"_edit_group_": true
}

[node name="InteractArea" type="Area2D" parent="Map/YSort/CouchArea/PieTray"]
collision_layer = 2
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Map/YSort/CouchArea/PieTray/InteractArea"]
shape = SubResource( 2 )

[node name="CruxtruderLid" type="StaticBody2D" parent="Map/YSort" groups=[
"Interactables",
]]
position = Vector2( 680, 1062 )

[node name="Sprite" type="Sprite" parent="Map/YSort/CruxtruderLid"]
position = Vector2( 0, -70 )
texture = ExtResource( 12 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/YSort/CruxtruderLid"]
polygon = PoolVector2Array( -37, 12, 5, 28, 38, 11, 38, 3, 0, -15, -36, 4 )

[node name="InteractArea" type="Area2D" parent="Map/YSort/CruxtruderLid"]
position = Vector2( 0, -135 )
collision_layer = 2
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Map/YSort/CruxtruderLid/InteractArea"]
shape = SubResource( 3 )

[node name="HarlequinHead" type="StaticBody2D" parent="Map/YSort" groups=[
"Interactables",
]]
position = Vector2( 923, 1168 )

[node name="Sprite" type="Sprite" parent="Map/YSort/HarlequinHead"]
position = Vector2( 0, -32 )
texture = ExtResource( 13 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/YSort/HarlequinHead"]
polygon = PoolVector2Array( -32, 20, 0, 20, 22, 13, 23, -2, 2, -4, -36, 4 )

[node name="InteractArea" type="Area2D" parent="Map/YSort/HarlequinHead"]
position = Vector2( 0, -33 )
collision_layer = 2
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Map/YSort/HarlequinHead/InteractArea"]
shape = SubResource( 4 )

[node name="Fireplace" type="StaticBody2D" parent="Map/YSort"]
position = Vector2( 248, 914 )

[node name="Sprite" type="Sprite" parent="Map/YSort/Fireplace"]
position = Vector2( 0, -232 )
texture = ExtResource( 14 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/YSort/Fireplace"]
position = Vector2( 0, -232 )
polygon = PoolVector2Array( -226, 350, -172, 375, -8, 294, 47, 321, 227, 230, 104, 190, 100, 43, -231, 136 )

[node name="Fireplace" type="Node2D" parent="Map/YSort/Fireplace" groups=[
"Interactables",
]]
position = Vector2( 120, -8.00006 )
__meta__ = {
"_edit_group_": true
}

[node name="InteractArea" type="Area2D" parent="Map/YSort/Fireplace/Fireplace"]
collision_layer = 2
collision_mask = 2147483650

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/YSort/Fireplace/Fireplace/InteractArea"]
polygon = PoolVector2Array( -34, 74, -48, -26, 48, -59, 66, 23 )

[node name="Pokers" type="Node2D" parent="Map/YSort/Fireplace" groups=[
"Interactables",
]]
position = Vector2( -42, -13.0001 )

[node name="InteractArea" type="Area2D" parent="Map/YSort/Fireplace/Pokers"]
position = Vector2( 0, 6 )
collision_layer = 2
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Map/YSort/Fireplace/Pokers/InteractArea"]
shape = SubResource( 5 )

[node name="Harlequins" type="Node2D" parent="Map/YSort/Fireplace" groups=[
"Interactables",
]]

[node name="InteractArea" type="Area2D" parent="Map/YSort/Fireplace/Harlequins"]
position = Vector2( -158, -182 )
collision_layer = 2
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Map/YSort/Fireplace/Harlequins/InteractArea"]
shape = SubResource( 6 )

[node name="Urn" type="Node2D" parent="Map/YSort/Fireplace" groups=[
"Interactables",
]]

[node name="InteractArea" type="Area2D" parent="Map/YSort/Fireplace/Urn"]
position = Vector2( 101, -150 )
collision_layer = 2
collision_mask = 2147483650
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Map/YSort/Fireplace/Urn/InteractArea"]
shape = SubResource( 7 )

[node name="BalconyDoorInside" type="Node2D" parent="Map" groups=[
"Interactables",
]]
position = Vector2( -6, -329 )

[node name="InteractArea" type="Area2D" parent="Map/BalconyDoorInside"]
collision_layer = 2
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/BalconyDoorInside/InteractArea"]
polygon = PoolVector2Array( -659, -122, -659, -565, -496, -595, -495, -176 )

[node name="BedroomDoor" type="Node2D" parent="Map" groups=[
"Interactables",
]]
position = Vector2( 210, -450 )
z_index = 1
__meta__ = {
"_edit_group_": true
}

[node name="InteractArea" type="Area2D" parent="Map/BedroomDoor"]
collision_layer = 2
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/BedroomDoor/InteractArea"]
polygon = PoolVector2Array( -642, -177, -643, -527, -515, -548, -513, -217 )

[node name="HallwayEntrance" type="Node2D" parent="Map" groups=[
"Interactables",
]]

[node name="InteractArea" type="Area2D" parent="Map/HallwayEntrance"]
collision_layer = 2
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/HallwayEntrance/InteractArea"]
polygon = PoolVector2Array( -144, -631, -5, -591, -7, -1037, -144, -1053 )

[node name="StudyEntrance" type="Node2D" parent="Map" groups=[
"Interactables",
]]

[node name="InteractArea" type="Area2D" parent="Map/StudyEntrance"]
collision_layer = 2
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/StudyEntrance/InteractArea"]
polygon = PoolVector2Array( -71, -151, -67, -416, -48, -447, -17, -456, 25, -445, 51, -403, 52, -141, 31, -132 )

[node name="KitchenEntrance" type="Node2D" parent="Map" groups=[
"Interactables",
]]

[node name="InteractArea" type="Area2D" parent="Map/KitchenEntrance"]
collision_layer = 2
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/KitchenEntrance/InteractArea"]
position = Vector2( -207, 10 )
polygon = PoolVector2Array( -63, -112, -62, -430, 59, -473, 58, -162 )

[node name="SpawnFromBalcony" type="Position2D" parent="."]
position = Vector2( 509, 4 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 1580, 1570 )

[node name="CameraControl" type="Area2D" parent="." groups=[
"CameraControl",
]]
position = Vector2( 351, 239 )
z_index = -4
script = ExtResource( 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CameraControl"]
shape = SubResource( 8 )
[connection signal="body_entered" from="CameraControl" to="CameraControl" method="_on_CameraControl_body_entered"]
[connection signal="body_exited" from="CameraControl" to="CameraControl" method="_on_CameraControl_body_exited"]
